--- a/sections/index__text-grid.liquid
+++ b/sections/index__text-grid.liquid
@@ -6,7 +6,7 @@
       {% for block in section.blocks %}
       <div class="grid__item">
         <div class="text-grid-content ">
-          <a href="/collections/lzf">
+          <a href="{{ block.settings.text_link }}">
             <div class="content-wrapper">
               <span class="h4">{{ block.settings.text }}</span>
               <span>{{ block.settings.textdes }}</span>
@@ -40,6 +40,11 @@
             "type": "richtext",
             "id": "textdes",
             "label": "Sub Title"
+          },
+          {
+            "type": "url",
+            "id": "text_link",
+            "label": "Text Link"
           }
         ]
       }
